chore: Add lazy loading for images and update landing page styles

--- a/lading_page.html
+++ b/lading_page.html
@@ -7,8 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <!-- Include Popper.js (required for Bootstrap's JavaScript plugins) -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<!-- Include Bootstrap JS -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="page.js"></script>
+    <!-- Include Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
 
@@ -48,7 +54,23 @@
         </div>
       </div>
     </nav>
+    <script>
+      let lastScrollTop = 0;
+window.addEventListener("scroll", function() {
+  let navbar = document.querySelector(".navbar");
+  let scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+  
+  if (scrollTop > lastScrollTop) {
+    // Downscroll
+    navbar.style.top = "-80px"; // Adjust the value to hide the navbar
+  } else {
+    // Upscroll
+    navbar.style.top = "0";
+  }
+  lastScrollTop = scrollTop;
+});
 
+    </script>
     <!-- Landing section with background image -->
     <section class="hero-section d-flex align-items-center">
         <div class="container text-center">
@@ -197,7 +219,7 @@
               <img src="social-3408791_1280.jpg" alt="Customer Image" class="img-fluid rounded-circle">
             </div>
             <div class="col-md-6">
-              <p class="testimonial-text">"This is the best service I have ever used! Highly recommend it to everyone!"</p>
+              <p class="testimonial-text">"I've really enjoyed using your website! The layout is intuitive, making it easy to navigate and find what I need. The tutorials are detailed and informative, and the content covers a wide range of topics that cater to different skill levels. However, I think adding a dark mode option would be a great addition for better night-time reading. Also, a feature to bookmark articles for later would be helpful. Overall, I appreciate the modern design and responsive experience on mobile devices. Thank you for the effort you put into maintaining this valuable resource—keep up the fantastic work"</p>
               <p class="customer-name">- John Doe</p>
             </div>
           </div>
@@ -208,7 +230,7 @@
               <img src="virtual-coworkers-3382503_1280.jpg" alt="Customer Image" class="img-fluid rounded-circle">
             </div>
             <div class="col-md-6">
-              <p class="testimonial-text">"Absolutely amazing! The team is very professional and attentive."</p>
+              <p class="testimonial-text">"Your website is an excellent resource, and I truly appreciate the effort that goes into maintaining it. The user-friendly interface makes navigation simple, and the tutorials are well-structured and easy to follow. The wide range of topics ensures there's always something new to learn. One improvement could be adding more interactive elements, like quizzes or practice exercises, to reinforce learning. Also, a community section for user discussions would add great value. Overall, the clean design, mobile responsiveness, and quality content keep me coming back. Thanks for providing such a comprehensive learning platform."</p>
               <p class="customer-name">- Jane Smith</p>
             </div>
           </div>
@@ -226,6 +248,13 @@
     </div>
   </div>
 </section>
+<script>
+  $(document).ready(function(){
+    $('#testimonialCarousel').carousel({
+      interval: 5000 // Optional: Change slide every 5 seconds
+    });
+  });
+</script>
 
 <!-- Influencers Section -->
 <section id="influencers" class="py-5 bg-light">
@@ -294,66 +323,82 @@ $(document).ready(function() {
 
 </script>
 
-
-<style>
-.carousel-item {
-  transition: opacity 0.5s ease-in-out;
-}
-
-.carousel-item.fade {
-  opacity: 0;
-}
-.carousel-item.active.fade {
-  opacity: 1;
-}
-</style>
-
 <!-- About Section -->
 <section id="about" class="py-5 bg-light">
-  <div class="container">
-    <h2 class="text-center mb-4">About Us</h2>
-    <p class="text-center">
-      At Collabify, we are dedicated to connecting brands with influencers to create powerful partnerships. Our mission is to simplify the collaboration process, allowing brands to enhance their visibility while providing influencers with opportunities to grow and succeed. 
-      With a focus on quality and professionalism, we strive to ensure that every collaboration is mutually beneficial and impactful. Join us in revolutionizing the way brands and influencers work together!
-    </p>
+  <div class="container d-flex align-items-center">
+    <div class="col-md-6">
+      <img src="marketing-3724797_1280.jpg" alt="About Us" class="img-fluid about-image" />
+    </div>
+    <div class="col-md-6">
+      <h2 class="text-center mb-4">About Us</h2>
+      <p class="text-center about-text">
+        At Collabify, we are dedicated to connecting brands with influencers to create powerful partnerships. Our mission is to simplify the collaboration process, allowing brands to enhance their visibility while providing influencers with opportunities to grow and succeed. 
+        With a focus on quality and professionalism, we strive to ensure that every collaboration is mutually beneficial and impactful. Join us in revolutionizing the way brands and influencers work together!
+      </p>
+    </div>
   </div>
 </section>
 
+
     <!-- Footer Section -->
-    <footer class="text-center py-4" style="background-color: #FFD7C4;">
-      <div class="container" >
-        <p class="mb-1">© 2024 Collabify |Email: info@collabify.com</p>
-        <div>
-          <a href="#" class="me-3">
-            <img src="facebook-icon.png" alt="Facebook" width="24">
-          </a>
-          <a href="#" class="me-3">
-            <img src="twitter-icon.png" alt="Twitter" width="24">
-          </a>
-          <a href="#">
-            <img src="linkedin-icon.png" alt="LinkedIn" width="24">
-          </a>
+    <footer class="custom-footer">
+        <div class="container">
+            <div class="row footer-columns">
+                <div class="col-md-3 mb-3">
+                    <h5>Top Tutorials</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#">SEO Tutorial</a></li>
+                        <li><a href="#">Digital Marketing Tutorial</a></li>
+                        <li><a href="#">Content Marketing Tutorial</a></li>
+                        <li><a href="#">Email Marketing Tutorial</a></li>
+                        <li><a href="#">Influencer MarketingTutorial</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 mb-3">
+                    <h5>Top References</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#">SEO Reference</a></li>
+                        <li><a href="#">Digital marketing Reference</a></li>
+                        <li><a href="#">Email marketing Reference</a></li>
+                        <li><a href="#"> Content marketing Reference</a></li>
+                        <li><a href="#">Influencer marketing Reference</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 mb-3">
+                    <h5>Top Brands</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#">Khaddi</a></li>
+                        <li><a href="#">Gucci</a></li>
+                        <li><a href="#">Rolex</a></li>
+                        <li><a href="#">Scents and stories</a></li>
+                        <li><a href="#">Yes style</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 mb-3">
+                    <h5>Get Certified</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#">SEO Certificate</a></li>
+                        <li><a href="#">Digital marketingCertificate</a></li>
+                        <li><a href="#">Email marketing  Certificate</a></li>
+                        <li><a href="#">Content marketing Certificate</a></li>
+                        <li><a href="#">Affiliate marketing Certificate</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 text-center social-icons">
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="#"><i class="fab fa-discord"></i></a>
+                    <a href="#"><i class="fab fa-github"></i></a>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+            <div class="footer-bottom mt-3">
+                <p>&copy; 1999-2024 by Refsnes Data. All Rights Reserved. <br>
+                Collabify is optimized for learning and connecting.</p>
+            </div>
         </div>
-      </div>
     </footer>
-
-    <script>
-      let lastScrollTop = 0;
-window.addEventListener("scroll", function() {
-  let navbar = document.querySelector(".navbar");
-  let scrollTop = window.pageYOffset || document.documentElement.scrollTop;
-  
-  if (scrollTop > lastScrollTop) {
-    // Downscroll
-    navbar.style.top = "-80px"; // Adjust the value to hide the navbar
-  } else {
-    // Upscroll
-    navbar.style.top = "0";
-  }
-  lastScrollTop = scrollTop;
-});
-
-    </script>
-
-</body>
+  </body>
 </html>
