--- a/lading_page.html
+++ b/lading_page.html
@@ -48,8 +48,12 @@
             </li>
           </ul>
           <div class="d-flex">
-            <a href="#" class="btn btn-outline-light me-2">Sign In</a>
-            <a href="#" class="btn" style="background-color: #87A2FF;">Login</a>
+           <button style="border:solid white; border-radius:10px;">
+            <a href="signin.html" class="btn">Sign In</a>
+           </button>
+           <button style="background-color: #87A2FF ; border-radius:10px;">
+            <a href="login.html" class="btn" style="background-color: #87A2FF;">Login</a>
+          </button>
           </div>
         </div>
       </div>
