--- a/lading_page.html
+++ b/lading_page.html
@@ -80,7 +80,9 @@ window.addEventListener("scroll", function() {
         <div class="container text-center">
             <h1 class="display-4 text-white">Welcome to Collabify</h1>
             <p class="lead text-white">Collaborate with the best influencers for your brand.</p>
-            <a href="#services" class="btn btn-lg" style="background-color: #87A2FF;">Get Started</a>
+           <button style="background-color: #87A2FF; border-radius:10px;">
+            <a href="login.html" class="btn btn-lg" style="background-color: #87A2FF;">Get Started</a>
+          </button>
         </div>
     </section>
 
@@ -89,7 +91,7 @@ window.addEventListener("scroll", function() {
       <div class="container">
         <div class="row text-center mb-5">
           <div class="col">
-            <h2 class="display-5">Our Featured Products</h2>
+            <h2 class="display-5">Our Featured Services</h2>
             <p class="text-muted">Check out our best-performing products and services.</p>
           </div>
         </div>
