--- a/login.html
+++ b/login.html
@@ -82,7 +82,7 @@
       }
       
       button:hover {
-        background-color: #5849c2;
+        background-color: #00ccff;
       }
       
       .register-link {
