--- a/login.html
+++ b/login.html
@@ -92,7 +92,7 @@
       }
       
       .register-link a {
-        color: #6c63ff;
+        color: #00ccff;
         text-decoration: none;
         font-weight: 600;
       }
