chore: Update landing page with new images and descriptions

--- a/lading_page.html
+++ b/lading_page.html
@@ -95,24 +95,24 @@ window.addEventListener("scroll", function() {
             <div class="card h-100 shadow-sm">
               <img src="virtual-coworkers-3382503_1280.jpg" class="card-img-top" alt="Product 1">
               <div class="card-body">
-                <h5 class="card-title">Collaboration</h5>
-                <p class="card-text">This is a description of the first product. It's an amazing product with top-notch features.</p>
+                <h5 class="card-title">Social Media Marketing</h5>
+                <p class="card-text">We will provide all the services related to Social media Marketing.</p>
               </div>
               <div class="card-footer">
-                <a href="#" class="btn btn-primary">Learn More</a>
+                <a href="p1.html" class="btn btn-primary">Learn More</a>
               </div>
             </div>
           </div>
           <!-- Card 2 -->
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100 shadow-sm">
-              <img src="social-media-3758364_1280.jpg" class="card-img-top" alt="Product 2">
+              <img src="young-girl-holding-sign-point-it-aside-high-quality-photo_144627-74479.jpg" class="card-img-top" alt="Product 2">
               <div class="card-body">
                 <h5 class="card-title">Brand Ambassador</h5>
-                <p class="card-text">This is a description of the second product. A great solution for businesses.</p>
+                <p class="card-text">We will promote your Product or Brand through Ambassador Program.</p>
               </div>
               <div class="card-footer">
-                <a href="#" class="btn btn-primary">Learn More</a>
+                <a href="p1.html" class="btn btn-primary">Learn More</a>
               </div>
             </div>
           </div>
@@ -121,8 +121,8 @@ window.addEventListener("scroll", function() {
             <div class="card h-100 shadow-sm">
               <img src="social-media-1233873_1280.jpg" class="card-img-top" alt="Product 3">
               <div class="card-body">
-                <h5 class="card-title">Marketing</h5>
-                <p class="card-text">This is a description of the third product. Perfect for personal use or small businesses.</p>
+                <h5 class="card-title">Graphic Design</h5>
+                <p class="card-text">We will provide Graphic design services.</p>
               </div>
               <div class="card-footer">
                 <a href="#" class="btn btn-primary">Learn More</a>
@@ -134,8 +134,8 @@ window.addEventListener("scroll", function() {
               <div class="card h-100 shadow-sm">
                 <img src="virtual-coworkers-3382503_1280.jpg" class="card-img-top" alt="Product 4">
                 <div class="card-body">
-                  <h5 class="card-title">New Product 1</h5>
-                  <p class="card-text">This is a description of the new product added.</p>
+                  <h5 class="card-title">Affiliate Marketing</h5>
+                  <p class="card-text">All the services are available related to marketing.</p>
                 </div>
                 <div class="card-footer">
                   <a href="#" class="btn btn-primary">Learn More</a>
@@ -147,8 +147,8 @@ window.addEventListener("scroll", function() {
               <div class="card h-100 shadow-sm">
                 <img src="virtual-coworkers-3382503_1280.jpg" class="card-img-top" alt="Product 5">
                 <div class="card-body">
-                  <h5 class="card-title">New Product 2</h5>
-                  <p class="card-text">Another great new product added here.</p>
+                  <h5 class="card-title">SEO</h5>
+                  <p class="card-text">Enhance your profile through SEO.</p>
                 </div>
                 <div class="card-footer">
                   <a href="#" class="btn btn-primary">Learn More</a>
