--- a/lading_page.html
+++ b/lading_page.html
@@ -266,21 +266,29 @@ window.addEventListener("scroll", function() {
 <section id="influencers" class="py-5 bg-light">
   <div class="container">
     <h2 class="text-center mb-4">Top Influencers of the Year</h2>
-    <div class="row">
+     <div class="row">
       <div class="col-md-3">
-        <img src="woman-8186582_640.jpg" alt="Influencer 1" class="img-fluid rounded-circle">
+        <a href="influcer1.html" target="_blank">
+          <img src="woman-8186582_640.jpg" alt="Influencer 1" class="img-fluid rounded-circle">
+      </a>
         <h5 class="text-center">Influencer 1</h5>
       </div>
       <div class="col-md-3">
+        <a href="influcer2.html" target="_blank">
         <img src="girl-2771001_640.jpg" alt="Influencer 2" class="img-fluid rounded-circle">
+      </a>
         <h5 class="text-center">Influencer 2</h5>
       </div>
       <div class="col-md-3">
+        <a href="influcer3.html" target="_blank">
         <img src="face-7401257_640.jpg" alt="Influencer 3" class="img-fluid rounded-circle">
+      </a>
         <h5 class="text-center">Influencer 3</h5>
       </div>
       <div class="col-md-3">
+        <a href="influncer4.html" target="_blank">
         <img src="woman-8186582_640.jpg" alt="Influencer 4" class="img-fluid rounded-circle">
+        </a>
         <h5 class="text-center">Influencer 4</h5>
       </div>
     </div>
