--- a/lading_page.html
+++ b/lading_page.html
@@ -291,19 +291,19 @@ window.addEventListener("scroll", function() {
         <a href="influcer2.html" target="_blank">
         <img src="girl-2771001_640.jpg" alt="Influencer 2" class="img-fluid rounded-circle">
       </a>
-        <h5 class="text-center">Saira Bano</h5>
+        <h5 class="text-center">Olivia</h5>
       </div>
       <div class="col-md-3">
         <a href="influcer3.html" target="_blank">
         <img src="face-7401257_640.jpg" alt="Influencer 3" class="img-fluid rounded-circle">
       </a>
-        <h5 class="text-center">Qurrat ul Ain</h5>
+        <h5 class="text-center">Amelia</h5>
       </div>
       <div class="col-md-3">
         <a href="influncer4.html" target="_blank">
         <img src="woman-8186582_640.jpg" alt="Influencer 4" class="img-fluid rounded-circle">
         </a>
-        <h5 class="text-center">Ainy</h5>
+        <h5 class="text-center">Isabella</h5>
       </div>
     </div>
   </div>
