--- a/influcer2.html
+++ b/influcer2.html
@@ -81,7 +81,7 @@
         <!-- Left side: Influencer Data -->
         <div class="col-md-4 col-lg-3 influencer-sidebar">
             <div class="influencer-info">
-                <h3>Saira Bano</h3>
+                <h3>Olivia</h3>
                 <p>Brand Influencer</p>
                 <div class="info-item">
                     <i class="bi bi-geo-alt"></i>
