--- a/influcer3.html
+++ b/influcer3.html
@@ -81,7 +81,7 @@
         <!-- Left side: Influencer Data -->
         <div class="col-md-4 col-lg-3 influencer-sidebar">
             <div class="influencer-info">
-                <h3>Qurrat ul Ain</h3>
+                <h3>Amelia</h3>
                 <p>Lifestyle & Travel Influencer</p>
                 <div class="info-item">
                     <i class="bi bi-geo-alt"></i>
