--- a/influncer4.html
+++ b/influncer4.html
@@ -81,7 +81,7 @@
         <!-- Left side: Influencer Data -->
         <div class="col-md-4 col-lg-3 influencer-sidebar">
             <div class="influencer-info">
-                <h3>Ainy</h3>
+                <h3>Isebella</h3>
                 <p>Influencer</p>
                 <div class="info-item">
                     <i class="bi bi-geo-alt"></i>
