--- a/signin.html
+++ b/signin.html
@@ -9,7 +9,7 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #f4f7fa;
+            background-color: #ffefd5;
             color: #333;
         }
         .signup-container {
@@ -115,7 +115,7 @@
                     </div>
                     <div>
                         <input type="radio" id="graphics" name="role" value="Graphics" required>
-                        <label for="graphics">Graphics</label>
+                        <label for="graphics">Graphic Designer</label>
                     </div>
                     <div>
                         <input type="radio" id="seo" name="role" value="SEO" required>
