--- a/lading_page.html
+++ b/lading_page.html
@@ -92,7 +92,7 @@ window.addEventListener("scroll", function() {
       <div class="container">
         <div class="row text-center mb-5">
           <div class="col">
-            <h2 class="display-5">Our Featured services</h2>
+            <h2 class="display-5">Our Featured Services</h2>
             <p class="text-muted">Check out our best-performing products and services.</p>
           </div>
         </div>
