--- a/lading_page.html
+++ b/lading_page.html
@@ -100,7 +100,7 @@ window.addEventListener("scroll", function() {
           <!-- Card 1 -->
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100 shadow-sm">
-              <img src="virtual-coworkers-3382503_1280.jpg" class="card-img-top" alt="Product 1">
+              <img src="images\medium-shot-woman-holding-smartphone.jpg" class="card-img-top" alt="Product 1">
               <div class="card-body">
                 <h5 class="card-title">Social Media Marketing</h5>
                 <p class="card-text">We will provide all the services related to Social media Marketing.</p>
@@ -152,7 +152,7 @@ window.addEventListener("scroll", function() {
             <!-- Card 5 -->
             <div class="col-lg-4 col-md-6 mb-4">
               <div class="card h-100 shadow-sm">
-                <img src="virtual-coworkers-3382503_1280.jpg" class="card-img-top" alt="Product 5">
+                <img src="images\10670006.jpg" class="card-img-top" alt="Product 5">
                 <div class="card-body">
                   <h5 class="card-title">SEO</h5>
                   <p class="card-text">Enhance your profile through SEO.</p>
