--- a/lading_page.html
+++ b/lading_page.html
@@ -331,7 +331,7 @@ window.addEventListener("scroll", function() {
         <img src="images (1).png" alt="Brand 5" class="img-fluid">
       </div>
       <div class="col-md-2">
-        <img src="images.png" alt="Brand 6" class="img-fluid">
+        <img src="download (2).png" alt="Brand 6" class="img-fluid">
       </div>
     </div>
   </div>
