change the name of landing page

--- a/landing_page.html
+++ b/landing_page.html
@@ -38,13 +38,13 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="landing_page.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="#services">Services</a>
             </li>
           </ul>
           <div class="d-flex">
@@ -67,15 +67,26 @@ window.addEventListener("scroll", function() {
   
   if (scrollTop > lastScrollTop) {
     // Downscroll
-    navbar.style.top = "-80px"; // Adjust the value to hide the navbar
+    navbar.style.top = "-80px";
   } else {
     // Upscroll
     navbar.style.top = "0";
   }
   lastScrollTop = scrollTop;
 });
+</script>
+<script>
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function(e) {
+            e.preventDefault();
 
-    </script>
+            document.querySelector(this.getAttribute('href')).scrollIntoView({
+                behavior: 'smooth'
+            });
+        });
+    });
+</script>
+   
     <!-- Landing section with background image -->
     <section class="hero-section d-flex align-items-center">
         <div class="container text-center">
