change the name of page

--- a/landing_page.html
+++ b/landing_page.html
@@ -386,11 +386,11 @@ $(document).ready(function() {
                 <div class="col-md-3 mb-3">
                     <h5>Top Tutorials</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">SEO Tutorial</a></li>
-                        <li><a href="#">Digital Marketing Tutorial</a></li>
-                        <li><a href="#">Content Marketing Tutorial</a></li>
-                        <li><a href="#">Email Marketing Tutorial</a></li>
-                        <li><a href="#">Influencer MarketingTutorial</a></li>
+                        <li><a href="gb3.html">SEO Tutorial</a></li>
+                        <li><a href="gb4.html">Digital Marketing Tutorial</a></li>
+                        <li><a href="gb1.html">Content Marketing Tutorial</a></li>
+                        <li><a href="gb1.html">Email Marketing Tutorial</a></li>
+                        <li><a href="gb5.html">Influencer MarketingTutorial</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 mb-3">
